tests/snapshots/wire_snapshots__snapshot_decode_live_connect.snap
---
source: tests/wire_snapshots.rs
assertion_line: 328
expression: r
---
Connected {
    id: "test",
    version: "",
    job: "nnnnnn/QUSER/QZDASOINIT",
}
