tests/snapshots/wire_snapshots__snapshot_decode_live_dove.snap
---
source: tests/wire_snapshots.rs
assertion_line: 581
expression: r
---
DoveResult {
    id: "d1",
    success: true,
    vedata: Array [
        Object {
            "op": String("TBSCAN"),
        },
    ],
    vemetadata: Some(
        Object {
            "version": Number(1),
        },
    ),
}
