tests/snapshots/wire_snapshots__snapshot_decode_live_error.snap
---
source: tests/wire_snapshots.rs
assertion_line: 368
expression: r
---
Error(
    ErrorResponse {
        id: "x",
        success: false,
        sqlstate: Some(
            "23505",
        ),
        sqlcode: Some(
            -803,
        ),
        error: Some(
            "nope",
        ),
        job: None,
    },
)
