tests/snapshots/wire_snapshots__snapshot_decode_live_gettracedata.snap
---
source: tests/wire_snapshots.rs
assertion_line: 554
expression: r
---
TraceData {
    id: "t1",
    success: true,
    tracedata: "+++ trace start +++",
}
