tests/snapshots/wire_snapshots__snapshot_decode_live_prepare.snap
---
source: tests/wire_snapshots.rs
assertion_line: 378
expression: r
---
PreparedStatement {
    id: "pr1",
    success: true,
    cont_id: "stmt-7",
    execution_time: 1.5,
}
