tests/snapshots/wire_snapshots__snapshot_request_cl.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "cl",
  "id": "test",
  "cmd": "WRKACTJOB"
}
