tests/snapshots/wire_snapshots__snapshot_request_connect.snap
---
source: tests/wire_snapshots.rs
expression: r
---
{
  "type": "connect",
  "id": "test",
  "technique": "tcp",
  "application": "mapepire-rs"
}
